--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                 <p><span id="views-count">98.4k</span> views</p>
 
                 <div>
-                  <i class="far fa-heart"></i>
+                  <i class="far fa-heart" id="heart"></i>
+                  <!-- <i class="fa-solid fa-heart"></i> -->
                   <i class="far fa-comment-alt"></i>
-                  <i class="far fa-bookmark"></i>
+                  <i class="far fa-bookmark" id="bookmark"></i>
+                  <!-- <i class="fa-solid fa-bookmark"></i> -->
                 </div>
               </div>
               <h3 id="video-title">Croissants | Flour and Stone</h3>
@@ -57,8 +59,7 @@
             </div>
           </div>
 
-          <div id="playlist-wrapper">
-          </div>
+          <div id="playlist-wrapper"></div>
         </div>
       </div>
     </main>
